SLING-12413: update/improve code